initial version of gallery

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="https://paulachris.com/236A7258_center_flip.jpg" />
     <title>Paula & Chris - Save the Date</title>
   </head>
-  <body style="background: #4d491a;">
+  <body style="margin: 0;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
