--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Paula & Chris - Save the Date" />
+    <meta property="og:title" content="Paula & Chris - RSVP by 08.01" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://paulachris.com" />
-    <meta property="og:description" content="Save the Date invitation for Paula and Chris' wedding on Sep 24th." />
+    <meta property="og:description" content="Invitation for Paula and Chris' wedding on Sep 24th." />
     <meta property="og:image" content="https://paulachris.com/236A7258_center_flip.jpg" />
-    <title>Paula & Chris - Save the Date</title>
+    <title>Paula & Chris - RSVP by 08.01</title>
   </head>
   <body style="margin: 0;">
     <div id="app"></div>
